# makemore-cpp-2023

./: .gitignore  .gitmodules  CMakeLists.txt  Optimization.md  Part2-MLP.md  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml
drafts/: Part2-MLP.md  Part3.md  Part4.md  Part5.md
examples/: CMakeLists.txt  bigram-array.cpp  bigram.cpp  distribution.cpp  logit-backprop.cpp  logit-mlp-backprop.cpp  logit-node-backprop.cpp  matplotlib-eigen-example.cpp  matplotlib-example.cpp  onehot-emma.cpp  regression0.cpp
include/: arraymath.h  backprop.h  batch.h  graph-node.h  logitlayer.h  logitmlp.h  logitnode.h  loss.h  mac.h  matplotlib_main.h  modelsampler.h  multinomial.h  node.h  onehot.h  pretty.h  randomdata.h  value.h
tests/: CMakeLists.txt
